[package]
name = "captcha"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rand = "0.8.5"
rusttype = "0.9.3"
wasm-bindgen = "0.2.84"
